[package]
name = "aoc-2016"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-1a"
path = "day-1a/main.rs"

[[bin]]
name = "day-1b"
path = "day-1b/main.rs"

[[bin]]
name = "day-3a"
path = "day-3a/main.rs"

[[bin]]
name = "day-3b"
path = "day-3b/main.rs"

[[bin]]
name = "day-4a"
path = "day-4a/main.rs"

[[bin]]
name = "day-4b"
path = "day-4b/main.rs"

[dependencies]
itertools = "0.12.1"
regex = "1.10.4"
