[package]
name = "aoc-2020"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-1a"
path = "day-1a/main.rs"

[[bin]]
name = "day-1b"
path = "day-1b/main.rs"

[[bin]]
name = "day-2a"
path = "day-2a/main.rs"

[[bin]]
name = "day-2b"
path = "day-2b/main.rs"

[[bin]]
name = "day-3a"
path = "day-3a/main.rs"

[[bin]]
name = "day-3b"
path = "day-3b/main.rs"

[[bin]]
name = "day-4a"
path = "day-4a/main.rs"

[[bin]]
name = "day-4b"
path = "day-4b/main.rs"

[[bin]]
name = "day-5a"
path = "day-5a/main.rs"

[[bin]]
name = "day-5b"
path = "day-5b/main.rs"

[[bin]]
name = "day-6a"
path = "day-6a/main.rs"

[[bin]]
name = "day-6b"
path = "day-6b/main.rs"

[[bin]]
name = "day-7a"
path = "day-7a/main.rs"

[[bin]]
name = "day-7b"
path = "day-7b/main.rs"

[[bin]]
name = "day-8a"
path = "day-8a/main.rs"

[[bin]]
name = "day-8b"
path = "day-8b/main.rs"

[dependencies]
itertools = "0.12.1"
regex = "1.10.4"
